# Modern-Social-Network

./: .dockerignore  .env.dev  .env.dev.db  .gitignore  Dockerfile  Dockerfile.prod  Notes.txt  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
apps/group/: urls.py  views.py
apps/group/migrations/: 0001_initial.py
apps/group/templates/group/: group_detail.html  group_form.html
apps/group/templates/group/partials/: group_detail_content.html  group_header_content.html  group_posts.html  membership_button.html
apps/post/: models.py  urls.py  views.py
apps/post/migrations/: 0001_initial.py
apps/post/templates/post/: post_detail.html  post_form.html  post_list.html
apps/post/templates/post/partials/: comment_item.html  like_button.html  post_detail.html  post_list_items.html
config/: urls.py
config/settings/: base.py  dev.py  prod.py
nginx/: nginx.conf
templates/: 403.html  authhomepage.html  base.html  home.html
templates/account/: email_confirm.html  login.html  logout.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html  verification_sent.html
templates/socialaccount/: login.html
